# src/modules/reviews/reviews.routes.js
@@ -1,7 +1,7 @@
 import { Router } from "express";
 import { Role } from "../../generated/prisma/client.js";
 import { authenticate, authorize } from "../../middleware/authenticate.js";
-import { listMyReviewsHandler, listReviewsHandler } from "./reviews.controller.js";
+import { createReviewHandler, listMyReviewsHandler, listReviewsHandler } from "./reviews.controller.js";
 
 const reviewsRouter = Router();
 
@@ -10,6 +10,13 @@ reviewsRouter.get(
 	authenticate,
 	authorize(Role.branch_admin, Role.staff, Role.super_admin),
 	listMyReviewsHandler,
+);
+
+reviewsRouter.post(
+  "/",
+  authenticate,
+  authorize(Role.client),
+  createReviewHandler,
 );
 
 reviewsRouter.get(
